lxml changelog
==============

current
=======

Features added
--------------

* Support for writing the XML representation of Elements and ElementTrees to
  Python unicode strings via ``etree.tounicode()``

* Support for writing XSLT results to Python unicode strings via ``unicode()``

* Parsing a unicode string no longer copies the string (reduced memory
  footprint)

* Parsing file-like objects now reads chunks rather than the whole file
  (reduced memory footprint)

* Parsing StringIO objects from the start avoids copying the string (reduced
  memory footprint)

* Read-only 'docinfo' attribute in ElementTree class holds DOCTYPE
  information, original encoding and XML version as seen by the parser

* etree module can be compiled without libxslt by commenting out the line
  ``include "xslt.pxi"`` near the end of the etree.pyx source file

* Better error messages in parser exceptions

* Error reporting now also works in XSLT

* Support for custom document loaders (URI resolvers) in parsers and XSLT,
  resolvers are registered at parser level

* Implementation of exslt:regexp for XSLT based on the Python 're' module,
  enabled by default, can be switched off with 'regexp=False' keyword argument

* Support for exslt extensions (libexslt) and node-set function

* Substantial speedup in XPath.evaluate()

* HTMLParser for parsing (broken) HTML

* XMLDTDID function parses XML into tuple (root node, ID dict) based on xml:id
  implementation of libxml2 (as opposed to ET compatible XMLID)

Bugs fixed
----------

* Element/SubElement failed to set attribute namespaces from passed ``attrib``
  dictionary

* ``tostring()`` now adds an XML declaration for non-ASCII encodings

* ``tostring()`` failed to serialize encodings that contain 0-bytes

* ElementTree.xpath() and XPathDocumentEvaluator were not using the
  ElementTree root node as reference point

* Calling ``document('')`` in XSLT failed to return the stylesheet

0.9.2 (2006-05-10)
==================

Features added