@@ -30,6 +30,8 @@ cdef extern from "Python.h":
     cdef Py_ssize_t PyList_GET_SIZE(object l)
     cdef int PyList_Append(object l, object obj)
     cdef int PyList_Reverse(object l)
+    cdef int PyList_Insert(object l, Py_ssize_t index, object o)
+    cdef object PyList_GET_ITEM(object l, Py_ssize_t index)
     cdef int PyDict_SetItemString(object d, char* key, object value)
     cdef int PyDict_SetItem(object d, object key, object value)
     cdef PyObject* PyDict_GetItemString(object d, char* key)
